# gloomhaven-2e-dump

./: LICENSE  README.md  gloomhaven-2e-faq.html  justfile  pyproject.toml
gloomhaven_output/: faq.md  shittyrules.md
gloomhaven_output/gloomhaven-2e-rulebook/: gloomhaven-2e-rulebook.md  gloomhaven-2e-rulebook_meta.json
src/gloomhaven_dump/: __init__.py  clean_output.py  main.py  process_faq.py  validate.py
